[package]
name = "runtime-generator"
version.workspace = true
repository.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
build = "build.rs"

[dependencies]
clap = { workspace = true, features = ["derive"] }
serde = { workspace = true }
serde_json = { workspace = true }
hex-literal = { workspace = true }
log = { workspace = true }
env_logger = { workspace = true, default-features = true }
srtool-lib = { workspace = true }
ctrlc = { workspace = true }
cargo_metadata = { workspace = true }
anyhow = { workspace = true }
inventory = { workspace = true }

mosaic-testnet-solo-runtime = { workspace = true, features = ["std"], optional = true }
mosaic-chain-runtime = { workspace = true, features = ["std"], optional = true }

pallet-airdrop = { workspace = true, optional = true }
pallet-im-online = { workspace = true, optional = true }
pallet-nft-staking = { workspace = true, optional = true }
pallet-nft-permission = { workspace = true, optional = true }
pallet-staking-incentive = { workspace = true, optional = true  }

sdk = { workspace = true, features = [
  "pallet-balances",
  "pallet-session",
  "sp-core",
  "sp-consensus-aura",
  "sp-runtime",
  "sc-chain-spec",
  "sc-service",
]}

[features]
default = [ "para-chain", "solo-chain", "std" ]

solo-chain = [
	"dep:mosaic-testnet-solo-runtime",
	"dep:pallet-airdrop",
	"dep:pallet-im-online",
	"dep:pallet-nft-permission",
	"dep:pallet-nft-staking",
	"dep:pallet-staking-incentive",
	"sdk/pallet-membership",
	"sdk/sp-consensus-grandpa",
]
para-chain = [
	"dep:mosaic-chain-runtime",
	"sdk/cumulus-primitives-core",
	"sdk/pallet-collator-selection",
	"sdk/pallet-xcm",
	"sdk/staging-parachain-info",
	"sdk/staging-xcm",
]
std = [
	"mosaic-chain-runtime?/std",
	"mosaic-testnet-solo-runtime?/std",
	"pallet-airdrop?/std",
	"pallet-im-online?/std",
	"pallet-nft-permission?/std",
	"pallet-nft-staking?/std",
	"pallet-staking-incentive?/std",
	"sdk/std",
]
runtime-benchmarks = [
	"mosaic-chain-runtime?/runtime-benchmarks",
	"mosaic-testnet-solo-runtime?/runtime-benchmarks",
	"pallet-airdrop?/runtime-benchmarks",
	"pallet-im-online?/runtime-benchmarks",
	"pallet-nft-permission?/runtime-benchmarks",
	"pallet-nft-staking?/runtime-benchmarks",
	"pallet-staking-incentive?/runtime-benchmarks",
	"sdk/runtime-benchmarks",
]
try-runtime = [
	"mosaic-chain-runtime?/try-runtime",
	"mosaic-testnet-solo-runtime?/try-runtime",
	"pallet-airdrop?/try-runtime",
	"pallet-im-online?/try-runtime",
	"pallet-nft-permission?/try-runtime",
	"pallet-nft-staking?/try-runtime",
	"pallet-staking-incentive?/try-runtime",
	"sdk/try-runtime",
]

