[package]
name = "utils"
edition = "2021"
publish = false
license.workspace = true
version.workspace = true
repository.workspace = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sdk = { workspace = true, features = [ "frame-support", "sp-staking", "frame-system", "sp-runtime", "sp-std", "sp-application-crypto", "pallet-session" ] }
impl-trait-for-tuples = { workspace = true }
codec = { workspace = true, features = ["derive"] }
scale-info = { workspace = true, features = ["derive"] }

[features]
default = [ "std" ]
std = [ "sdk/std" ]
runtime-benchmarks = []
