[package]
name = "mosaic-chain-node"
description = "Mosaic Chain node"
version.workspace = true
repository.workspace = true
edition.workspace = true
license.workspace = true
authors.workspace = true
build = "build.rs"
publish = false

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[package.metadata.deb]
depends = "ca-certificates"

[package.metadata.deb.variants.devnet]
name = "mosaic-chain-devnet"
conflicts = "mosaic-chain"
suggests = "mosaic-explorer-rc, mosaic-admin-rc, mosaic-announcer-rc"
features = [ "dev-spec" ]

[package.metadata.deb.variants.mainnet]
name = "mosaic-chain"
conflicts = "mosaic-chain-devnet"
suggests = "mosaic-explorer, mosaic-admin, mosaic-announcer"

[[bin]]
name = "mosaic-chain"
path = "src/main.rs"

[dependencies]
clap = { workspace = true, features = ["derive"] }
log = { workspace = true }
serde = { workspace = true }
jsonrpsee = { workspace = true, features = ["server"] }
futures = { workspace = true }
serde_json = { workspace = true }
color-print = { workspace = true }

# Local
mosaic-chain-runtime = { workspace = true }

# TODO: once procmacros are compatible with umbrella crate remove this
sc-tracing = { workspace = true }

sdk = { workspace = true, features = [
	"frame-benchmarking",
	"frame-benchmarking-cli",
	"pallet-transaction-payment-rpc",
	"sc-basic-authorship",
	"sc-chain-spec",
	"sc-cli",
	"sc-client-api",
	"sc-offchain",
	"sc-consensus",
	"sc-executor",
	"sc-network",
	"sc-network-sync",
	"sc-rpc",
	"sc-service",
	"sc-sysinfo",
	"sc-telemetry",
	"sc-transaction-pool",
	"sc-transaction-pool-api",
	"sp-api",
	"sp-block-builder",
	"sp-blockchain",
	"sp-consensus-aura",
	"sp-core",
	"sp-keystore",
	"sp-io",
	"sp-runtime",
	"sp-timestamp",
	"substrate-frame-rpc-system",
	"substrate-prometheus-endpoint",
	"polkadot-cli",
	"polkadot-primitives",
	"staging-xcm",
	"cumulus-client-cli",
	"cumulus-client-collator",
	"cumulus-client-consensus-aura",
	"cumulus-client-consensus-common",
	"cumulus-client-consensus-proposer",
	"cumulus-client-service",
	"cumulus-primitives-core",
	"cumulus-primitives-parachain-inherent",
	"cumulus-relay-chain-interface",
]}

[build-dependencies]
sdk = { workspace = true, features = ["substrate-build-script-utils"] }
runtime-generator = { workspace = true, features = ["para-chain"], optional = true }

[features]
default = [ "std" ]
dev-spec = [ "dep:runtime-generator" ]

std = [ "mosaic-chain-runtime/std", "runtime-generator?/std", "sdk/std" ]

runtime-benchmarks = [
	"mosaic-chain-runtime/runtime-benchmarks",
	"runtime-generator?/runtime-benchmarks",
	"sdk/runtime-benchmarks",
]
try-runtime = [
	"mosaic-chain-runtime/try-runtime",
	"runtime-generator?/try-runtime",
	"sdk/try-runtime",
]
