[package]
name = "mosaic-chain-node"
description = "Mosaic Chain node"
version.workspace = true
repository.workspace = true
edition.workspace = true
license = "GPL-3.0-or-later"
authors.workspace = true
build = "build.rs"
publish = false

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[package.metadata.deb]
depends = ["ca-certificates", "libstdc++6", "libgcc-s1", "libc6"]
extended-description = "Mosaic parachain node"
section = "net"
preserve-symlinks = true
suggests = "mosaic-indexer, mosaic-admin-backend, mosaic-announcer"
assets = [
	["../../CHANGELOG.md", "usr/share/doc/mosaic-chain-devnet/changelog.md", "644"],
	["../../chainspecs/devnet/devnet-spec-1752679127.json", "usr/share/mosaic-chain-devnet/chainspec/", "644"],
	["../../chainspecs/devnet/para-latest.json", "usr/share/mosaic-chain-devnet/chainspec/", "644"],
	["../../chainspecs/paseo/paseo-spec-1728985302.json", "usr/share/mosaic-chain-devnet/chainspec/", "644"],
	["../../chainspecs/paseo/relay-latest.json", "usr/share/mosaic-chain-devnet/chainspec/", "644"],
	# TODO: once releasing to mainnet inculde chainspecs here
	["target/release/mosaic-chain", "usr/bin/mosaic-chain", "755"]
]

[package.metadata.deb.variants.benchmark]
name = "mosaic-chain-benchmark"
features = ["runtime-benchmarks", "dev-spec"]
assets = [
	["../../CHANGELOG.md", "usr/share/doc/mosaic-chain-benchmark/changelog.md", "644"],
	["../../scripts/benchmark-runtime-weights.hbs", "usr/share/mosaic-chain-benchmark/", "644"],
	["../../scripts/benchmark-runtime.sh", "usr/bin/benchmark-runtime", "755"],
	["target/release/mosaic-chain", "usr/bin/mosaic-chain-benchmark", "755"]
]

[[bin]]
name = "mosaic-chain"
path = "src/main.rs"

[dependencies]
clap = { workspace = true, features = ["derive", "env"] }
log = { workspace = true }
serde = { workspace = true }
jsonrpsee = { workspace = true, features = ["server"] }
futures = { workspace = true }
serde_json = { workspace = true }
color-print = { workspace = true }
sentry = { workspace = true }

# Local
mosaic-chain-runtime = { workspace = true }

sdk = { workspace = true, features = [
	"frame-benchmarking",
	"frame-benchmarking-cli",
	"pallet-transaction-payment-rpc",
	"sc-tracing",
	"sc-basic-authorship",
	"sc-chain-spec",
	"sc-cli",
	"sc-client-api",
	"sc-offchain",
	"sc-consensus",
	"sc-executor",
	"sc-network",
	"sc-network-sync",
	"sc-rpc",
	"sc-service",
	"sc-sysinfo",
	"sc-telemetry",
	"sc-transaction-pool",
	"sc-transaction-pool-api",
	"sp-api",
	"sp-block-builder",
	"sp-blockchain",
	"sp-consensus-aura",
	"sp-core",
	"sp-keystore",
	"sp-io",
	"sp-runtime",
	"sp-timestamp",
	"substrate-frame-rpc-system",
	"substrate-prometheus-endpoint",
	"polkadot-cli",
	"polkadot-primitives",
	"staging-xcm",
	"cumulus-client-cli",
	"cumulus-client-collator",
	"cumulus-client-bootnodes",
	"cumulus-client-consensus-aura",
	"cumulus-client-consensus-common",
	"cumulus-client-consensus-proposer",
	"cumulus-client-service",
	"cumulus-primitives-core",
	"cumulus-primitives-parachain-inherent",
	"cumulus-relay-chain-interface"
]}

[build-dependencies]
sdk = { workspace = true, features = ["substrate-build-script-utils"] }
runtime-generator = { workspace = true, features = ["para-chain"], optional = true }

[features]
default = [ "std" ]
dev-spec = [ "dep:runtime-generator" ]

std = [ "mosaic-chain-runtime/std", "runtime-generator?/std", "sdk/std" ]

runtime-benchmarks = [
	"mosaic-chain-runtime/runtime-benchmarks",
	"runtime-generator?/runtime-benchmarks",
	"sdk/runtime-benchmarks",
]
try-runtime = [
	"mosaic-chain-runtime/try-runtime",
	"runtime-generator?/try-runtime",
	"sdk/try-runtime",
]
