[package]
name = "mosaic-testnet-solo-node"
description = "Mosaic Chain testnet solo node"
version.workspace = true
edition.workspace = true
license.workspace = true
publish = false
repository.workspace = true
authors.workspace = true
build = "build.rs"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[package.metadata.deb]
depends = "ca-certificates"

[package.metadata.deb.variants.rc]
name = "mosaic-testnet-solo-rc"
conflicts = "mosaic-testnet-solo"
suggests = "mosaic-explorer-rc, mosaic-admin-rc, mosaic-announcer-rc"

[package.metadata.deb.variants.release]
name = "mosaic-testnet-solo"
conflicts = "mosaic-testnet-solo-rc"
suggests = "mosaic-explorer, mosaic-admin, mosaic-announcer"

[[bin]]
name = "mosaic-testnet-solo"
path = "src/main.rs"

[dependencies]
clap = { workspace = true, features = ["derive"] }
frame-benchmarking = { workspace = true }
frame-benchmarking-cli = { workspace = true }
frame-system = { workspace = true }
futures = { workspace = true, features = ["thread-pool"] }
jsonrpsee = { workspace = true, features = ["server"] }
pallet-im-online = { workspace = true }
pallet-transaction-payment = { workspace = true }
pallet-transaction-payment-rpc = { workspace = true }
sc-basic-authorship = { workspace = true }
sc-cli = { workspace = true }
sc-client-api = { workspace = true }
sc-consensus = { workspace = true }
sc-consensus-aura = { workspace = true }
sc-consensus-grandpa = { workspace = true }
sc-executor = { workspace = true }
sc-network = { workspace = true }
sc-offchain = { workspace = true }
sc-rpc-api = { workspace = true }
sc-service = { workspace = true }
sc-statement-store = { workspace = true }
sc-telemetry = { workspace = true }
sc-transaction-pool = { workspace = true }
sc-transaction-pool-api = { workspace = true }
sp-api = { workspace = true }
sp-block-builder = { workspace = true }
sp-blockchain = { workspace = true }
sp-consensus-aura = { workspace = true }
sp-consensus-grandpa = { workspace = true }
sp-core = { workspace = true }
sp-inherents = { workspace = true }
sp-io = { workspace = true }
sp-keyring = { workspace = true }
sp-runtime = { workspace = true }
sp-timestamp = { workspace = true }
substrate-frame-rpc-system = { workspace = true }

# Local Dependencies
mosaic-testnet-solo-runtime.workspace = true
pallet-nft-staking.workspace = true
serde_json = { workspace = true }

[build-dependencies]
substrate-build-script-utils = { workspace = true }

[features]
default = []
# Dependencies that are only required if runtime benchmarking should be built.
runtime-benchmarks = [
	"mosaic-testnet-solo-runtime/runtime-benchmarks",
	"frame-benchmarking/runtime-benchmarks",
	"frame-benchmarking-cli/runtime-benchmarks",
]
# Enable features that allow the runtime to be tried and debugged. Name might be subject to change
# in the near future.
try-runtime = [
	"mosaic-testnet-solo-runtime/try-runtime",
]
