[package]
name = "mosaic-testnet-solo-node"
description = "Mosaic Chain testnet solo node"
version.workspace = true
edition.workspace = true
license = "GPL-3.0-or-later"
publish = false
repository.workspace = true
authors.workspace = true
build = "build.rs"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[package.metadata.deb]
name = "mosaic-testnet-solo"
depends = "ca-certificates"
suggests = "mosaic-explorer-rc, mosaic-admin-rc, mosaic-announcer-rc"
conflicts = "mosaic-testnet-solo-rc"
assets = [
  ["target/release/mosaic-testnet-solo", "usr/bin/", "755" ],
	["../../chainspecs/testnet/*", "usr/share/mosaic-testnet-solo/chainspec", "644" ],
]

[[bin]]
name = "mosaic-testnet-solo"
path = "src/main.rs"

[dependencies]
clap = { workspace = true, features = ["derive"] }
futures = { workspace = true, features = ["thread-pool"] }
jsonrpsee = { workspace = true, features = ["server"] }

sdk = { workspace = true, features = [
	"frame-benchmarking",
	"frame-benchmarking-cli",
	"frame-system",
	"pallet-transaction-payment",
	"pallet-transaction-payment-rpc",
	"sc-basic-authorship",
	"sc-cli",
	"sc-client-api",
	"sc-consensus",
	"sc-consensus-aura",
	"sc-consensus-grandpa",
	"sc-executor",
	"sc-network",
	"sc-offchain",
	"sc-rpc-api",
	"sc-service",
	"sc-statement-store",
	"sc-telemetry",
	"sc-transaction-pool",
	"sc-transaction-pool-api",
	"sp-api",
	"sp-block-builder",
	"sp-blockchain",
	"sp-consensus-aura",
	"sp-consensus-grandpa",
	"sp-core",
	"sp-inherents",
	"sp-io",
	"sp-keyring",
	"sp-runtime",
	"sp-timestamp",
	"substrate-frame-rpc-system",
]}

# Local Dependencies
mosaic-testnet-solo-runtime = { workspace = true }

[build-dependencies]
sdk = { workspace = true, features = ["substrate-build-script-utils"]}
runtime-generator = { workspace = true, features = ["solo-chain"], optional = true }

[features]
default = [ "std" ]
dev-spec = [ "dep:runtime-generator" ]

std = [ "mosaic-testnet-solo-runtime/std", "runtime-generator?/std", "sdk/std" ]
# Dependencies that are only required if runtime benchmarking should be built.
runtime-benchmarks = [
	"mosaic-testnet-solo-runtime/runtime-benchmarks",
	"runtime-generator?/runtime-benchmarks",
	"sdk/runtime-benchmarks",
]
# Enable features that allow the runtime to be tried and debugged. Name might be subject to change
# in the near future.
try-runtime = [
	"mosaic-testnet-solo-runtime/try-runtime",
	"runtime-generator?/try-runtime",
	"sdk/try-runtime",
]
