[package]
name = "pallet-airdrop"
edition = "2021"
publish = false
license.workspace = true
version.workspace = true
repository.workspace = true

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]

[dependencies]
sdk = { workspace = true, features = ["frame-support", "frame-system", "sp-std", "sp-core", "sp-runtime"] }
codec = { workspace = true, features = ["derive"] }
pallet-nft-staking = { workspace = true, optional = true }
scale-info = { workspace = true, features = ["derive"] }
utils = { workspace = true }

[dev-dependencies]
sdk = { workspace = true, features = ["sp-io"] }

[features]
default = [ "std" ]
std = [ "pallet-nft-staking?/std", "sdk/std", "utils/std" ]
try-runtime = [ "pallet-nft-staking?/try-runtime", "sdk/try-runtime" ]
runtime-benchmarks = [
	"dep:pallet-nft-staking",
	"pallet-nft-staking?/runtime-benchmarks",
	"sdk/runtime-benchmarks",
	"utils/runtime-benchmarks",
]
